update for HTMLENTITY

--- a/README
+++ b/README
@@ -3,9 +3,11 @@ Currently bsdconv_mktable doesn't support CALLBACK
 please follow steps below to generate CALLBACK table
 
 make
-cp build/share/bsdconv/inter/DUMMY build/share/bsdconv/to/UTF-8
-hexedit build/share/bsdconv/to/UTF-8 (Change first byte to 04)
+cp build/share/bsdconv/inter/DUMMY build/share/bsdconv/to/BLAH
+hexedit build/share/bsdconv/to/BLAH (Change first byte to 04)
 sudo make install
+
+*BLAH could be UTF-8, HTMLENTITY, etc.
 
 --
 Table format:
