--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 * move HTMLENTITY to inter/ to make it more general, need to make dummy map as filter for each codecs
 * loopback in tailed wildcard state
+
+* allow to use inter-map pipe, e.g. from:inter1:inter2:..:to
