add example and convension

--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 Table format:
 from<tab>to
 
-in to field, UNICODE is prefixed with 01
+Internal encoding:
+* Should be as unicoded as possible
+* UNICODE is prefixed with 01
+* CNS11643 is prefixed with 02
 
 --
 Compiling & Installation (FreeBSD):
@@ -11,10 +14,12 @@ sudo make install
 --
 Run:
 Convert traditional chinese big5 to simplified chinese utf-8
-> bsdconv cp950,ascii,iso-8859-1:chs:utf-8 in.txt out.txt
+> bsdconv big5,ascii:chs:utf-8 in.txt out.txt
 
 Convert big5 data, traditional chinese to simplified chinese, 
-CRLF/CR/LF to CRLF, to big5 data, translate simplified chinese words which are
-not in big5 to HTML entities
-> bsdconv cp950,ascii,iso-8859-1:chs,win:cp950,ascii,iso-8859-1,htmlentity in.txt out.txt
+CRLF/CR/LF to CRLF, to big5 data, translate simplified chinese words, which are
+not in big5, to HTML entities
+> bsdconv big5,ascii:chs,win:cp950,ascii,iso-8859-1,htmlentity in.txt out.txt
 
+More example:
+> ./build/bin/bsdconv big5,ascii:nl2br:ascii,image in.txt out.htm
