--- a/README
+++ b/README
@@ -3,6 +3,7 @@ from<tab>to
 
 Internal encoding:
 * Should be as unicoded as possible
+* BSDCONV special chars are prefixed with 00
 * UNICODE is prefixed with 01
 * CNS11643 is prefixed with 02
 
@@ -23,3 +24,8 @@ not in big5, to HTML entities
 
 More example:
 > ./build/bin/bsdconv big5,ascii:nl2br:ascii,image in.txt out.htm
+
+Maintain inter map:
+> bsdconv bsdconv_keyword,bsdconv::bsdconv_keyword,utf-8 MAP.txt edit.tmp
+> vi edit.tmp
+> bsdconv bsdconv_keyword,utf-8::bsdconv_keyword,bsdconv edit.tmp MAP.txt
