--- a/README
+++ b/README
@@ -21,13 +21,17 @@ Convert big5 data, traditional chinese to simplified chinese,
 CRLF/CR/LF to CRLF, to big5 data, translate simplified chinese words, which are
 not in big5, to HTML entities
 > bsdconv big5,ascii:chs,win:cp950,ascii,iso-8859-1,htmlentity in.txt out.txt
-If you prefer to use glyph image from CNS11643, use inter map "CNS11643" the
- transform interencoding to CNS11643 (prefixed with 02).
 
 More example:
-> ./build/bin/bsdconv big5,ascii:nl2br:ascii,image in.txt out.htm
+> bsdconv big5,ascii:nl2br:ascii,html-img in.txt out.htm
+#html-img is actually ASCII-HTML-UNICODE-IMG
+
+> bsdconv utf-8:ascii,ascii-html-cns11643-img in.txt out.htm
+#if you prefer to use glyph image from http://www.cns11643.gov.tw
 
 Maintain inter map:
 > bsdconv bsdconv_keyword,bsdconv:bsdconv_keyword,utf-8 MAP.txt edit.tmp
 > vi edit.tmp
 > bsdconv bsdconv_keyword,utf-8:bsdconv_keyword,bsdconv edit.tmp MAP.txt
+
+
