--- a/README
+++ b/README
@@ -43,3 +43,4 @@ WINDOWS:
 Latest build could be found at http://security-hole.info/distfile/win32/bsdconv.tar.gz
 Download and extract it, then goto build/ and run mk_table.bat
 then copy everythings in build/ to c:\bsdconv\
+NOTICE: alias is not yet supported for windows
