--- a/README
+++ b/README
@@ -30,7 +30,7 @@ not in big5, to HTML entities
 > bsdconv big5,ascii:chs,win:cp950,ascii,htmlentity in.txt out.txt
 
 Very useful for migrating MySQL DB from Big5 to UTF-8
-> bsdconv htmlentity,big5-5c,big5,ascii::utf-8,ascii in.sql out.sql
+> bsdconv htmlentity,big5-5c,big5,ascii:utf-8,ascii in.sql out.sql
 
 More example:
 > bsdconv big5,ascii:nl2br:ascii,html-img in.txt out.htm
