--- a/README
+++ b/README
@@ -4,6 +4,7 @@ from<tab>to
 Internal encoding:
 * Should be as unicoded as possible
 * BSDCONV special chars are prefixed with 00
+  * 0000 is used by RAW
 * UNICODE is prefixed with 01
 * CNS11643 is prefixed with 02
 
