add example of re-converting

--- a/README
+++ b/README
@@ -35,6 +35,9 @@ not in big5, to HTML entities, and uppercase the ascii characters.
 Very useful for migrating MySQL DB from Big5 to UTF-8
 > bsdconv htmlentity,big5-5c,big5,ascii:utf-8,ascii in.sql out.sql
 
+Recover from mis-decoding/encoding (mistreated iso-8859-2 as iso-8859-1 and converted to utf-8)
+> bsdconv 'ascii,utf-8:iso-8859-1,ascii|ascii,iso-8859-2:utf-8,ascii'
+
 More example:
 > bsdconv big5,ascii:nl2br:ascii,html-img in.txt out.htm
 #html-img is actually ASCII-HTML-UNICODE-IMG
