update demo urls

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Online DEMO:
-http://security-hole.info/~buganini/bsdconv.php
+http://cnmc.tw/~buganini/bsdconv.php
+http://security-hole.info/~buganini/bsdconv.php (currently dead)
 
 --
 Table format:
