add from/_GB18030 and its alias

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@
 	add {from,to}/LOCALE alias to system locale
 	rename inter/JP_PINYIN to inter/KANA_PHONETIC
 	add transposed to/_CP12151, to/_CP1252, to/_CP874, to/_CP949, to/_SHIFT-JIS
+	add from/GB18030
 
 7.0:
 	add inter/SPLIT
