--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 7.2:
 	add {from,to}/_JIS0212 and it's alias
 	bugfixes
+	update inter/ZHTW, inter/ZHCN, to/CP950_TRANS, to/CP936_TRANS
 
 7.1:
 	add {from,to}/LOCALE alias to system locale
