--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@
 	add {from,to}/_JIS0212 and it's alias
 	bugfixes
 	update inter/ZHTW, inter/ZHCN, to/CP950_TRANS, to/CP936_TRANS
+	add inter/ZH_FUZZY_TW, INTER/ZH_FUZZY_CN
 
 7.1:
 	add {from,to}/LOCALE alias to system locale
