--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 8.1:
 	fix for MinGW
 	export bsdconv_malloc/bsdconv_free
+	add {from,to}/CCCII
 
 8.0:
 	add flush function into callback interface
