--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,12 @@
+10.0:
 	bash completion script (buggy)
 	extend from/ESCAPE to support \uUUUU \xXX \OOO
 	add bsdconv -l
 	chown/chmod for created file
 	use system-provided PATH_MAX (thanks to PkmX)
 	sync data from project chvar
+	add support for EBCDIC decoding: 37, 930, 933, 935, 937, 939
+	add new state status: SUBMATCH_SUBROUTINE, API changed
 
 9.0:
 	fix for MinGW
