--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@
 	sync data from project chvar
 	add EBCDIC codecs: 37, 930, 933, 935, 937, 939
 	add new state status: SUBMATCH_SUBROUTINE
+	fix line separator issue on windows (thanks to roytam1)
 
 9.0:
 	fix for MinGW
