--- a/README
+++ b/README
@@ -69,8 +69,7 @@ Maintain inter map:
 
 --
 WINDOWS:
-http://github.com/buganini/bsdconv/downloads
-Download and extract it, then copy everythings in build/ to c:\bsdconv\
+Use mingw with Makefile.win to build it, then copy everythings in build/ to c:\bsdconv\
 the path of the executable will be c:\bsdconv\bsdconv.exe
 
 If you want to install to directory other than default path
